# gigs-app

./: .env.example  .gitignore  README.md  REFRESHING_SCRAPERS.md  pyproject.toml
.github/workflows/: email.yml  pages.yml
scripts/: build_site.py  spotify_login.py
src/: __init__.py  aggregator.py  config.py  db.py  display.py  emailer.py  logging_config.py  main.py  matcher.py  models.py  pipeline.py  spotify_client.py
src/sources/: __init__.py  bandsintown.py  base.py  dice.py  ra.py  skiddle.py  ticketmaster.py  util.py
src/web/: __init__.py  __main__.py  app.py  render.py
src/web/templates/: callback.html  index.html
tests/: test_aggregator.py  test_config.py  test_db.py  test_display.py  test_emailer.py  test_matcher.py  test_sources.py  test_spotify_client.py  test_web.py
tests/fixtures/: README.md  bandsintown_sample.json  dice_jsonld.html  dice_page.html  dice_sample.json  ra_sample.json  skiddle_sample.json  ticketmaster_sample.json
