[project]
name = "london-gig-radar"
version = "0.1.0"
description = "Weekly email digest of London gigs by artists you follow/like on Spotify."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "rapidfuzz>=3.9",
    "selectolax>=0.3.21",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
]

[project.optional-dependencies]
scrapers = [
    "playwright>=1.44",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
gig-radar = "src.main:main"
gig-radar-web = "src.web.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
